--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+/* Modal Content */
+.modal-content {
+  overflow: auto; /* Enable scroll if needed */
+  top: 10%; /* Location of the box */
+  position: absolute;
+  background-color: #fefefe;
+  margin: auto;
+
+  border: 1px solid #888;
+  width: 80%;
+  z-index: 1;
+
+  top: 10%;
+  height: 60%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.createEventButton {
+  width: 86px;
+  height: 40px;
+  background-color: #f9cb11;
+  border: none;
+  border-radius: 6px;
+  position: absolute;
+  top: 15%;
+  right: 2%;
+  cursor: pointer;
+  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.2);
+  outline: 0;
+  transition: all 0.25s ease;
+  opacity: 0.8;
+  z-index: 10000;
+}
+/* //form stuff */
+
+* {
+  outline: 0;
+}
+
+input {
+  display: inline-flex;
+  margin: 1em;
+  padding: 1em;
+  width: 35em;
+  border-radius: 8px;
+  border-style: none;
+  border: 1px solid #e4e6e8;
+  transition: 0.1s ease;
+}
+
+input:hover {
+  border-color: palevioletred;
+}
+
+.submitButton {
+  margin: 0.8em;
+  padding: 1em;
+  border: 1px solid #e4e6e8;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.1s ease-in;
+  width: 90%;
+  align-content: center;
   text-align: center;
+  position: absolute;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.submitButton:hover {
+  background-color: palevioletred;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
